--- a/Noveno dia/brawls.html
+++ b/Noveno dia/brawls.html
@@ -92,7 +92,7 @@
             border-radius: 10px;
         }
         .modal {
-            display: none;
+            display: none; /* El modal está oculto por defecto */
             position: fixed;
             top: 0; left: 0;
             width: 100%; height: 100%;
@@ -100,18 +100,24 @@
             justify-content: center;
             align-items: center;
         }
+
         .modal-content {
             background: white;
             padding: 20px;
             border-radius: 10px;
             max-width: 500px;
             text-align: left;
+            position: relative; /* Asegura que la X esté posicionada correctamente dentro de este contenedor */
         }
+
         .modal-close {
-            float: right;
+            position: absolute;
+            top: 10px;
+            right: 10px;
             cursor: pointer;
             font-weight: bold;
         }
+
         .search-box {
             margin: 20px auto;
             max-width: 400px;
@@ -411,22 +417,23 @@
   <!-- Modal -->
   <div class="modal" id="brawlerModal">
     <div class="modal-content">
-      <span class="modal-close" onclick="closeModal()">&times;</span>
-      <h3 id="modalTitle"></h3>
-      <p id="modalText"></p>
+        <span class="modal-close" onclick="closeModal()">&times;</span>
+        <h3 id="modalTitle"></h3>
+        <p id="modalText"></p>
     </div>
-  </div>
+</div>
   
   <script>
-    function showModal(nombre, descripcion) {
-      document.getElementById('modalTitle').innerText = nombre;
-      document.getElementById('modalText').innerText = descripcion;
-      document.getElementById('brawlerModal').style.display = "block";
-    }
-  
-    function closeModal() {
-      document.getElementById('brawlerModal').style.display = "none";
-    }
+        function showModal(nombre, descripcion) {
+            document.getElementById('modalTitle').innerText = nombre;
+            document.getElementById('modalText').innerText = descripcion;
+            document.getElementById('brawlerModal').style.display = "flex"; /* Muestra el modal usando flex */
+        }
+
+        function closeModal() {
+            document.getElementById('brawlerModal').style.display = "none"; /* Oculta el modal */
+        }
+
   
     function filterBrawlers(tipo) {
       let cards = document.querySelectorAll('.brawler-card');
