--- a/Noveno dia/brawls.html
+++ b/Noveno dia/brawls.html
@@ -11,6 +11,7 @@
             padding: 0;
             color: #333;
         }
+        /*header*/
         header {
             background-color: #febe20;
             color: white;
@@ -55,6 +56,7 @@
         .filters button:hover {
             background-color: #febe20;
         }
+        /*Galeria de brawls stars*/
         .gallery {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -67,11 +69,6 @@
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
             text-align: center;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-        .brawler-card img {
-            width: 100%;
-            height: auto;
-            border-radius: 15px;
         }
         .brawler-card:hover {
             transform: translateY(-10px);
@@ -92,7 +89,7 @@
             border-radius: 10px;
         }
         .modal {
-            display: none; /* El modal está oculto por defecto */
+            display: none; 
             position: fixed;
             top: 0; left: 0;
             width: 100%; height: 100%;
@@ -107,28 +104,80 @@
             border-radius: 10px;
             max-width: 500px;
             text-align: left;
-            position: relative; /* Asegura que la X esté posicionada correctamente dentro de este contenedor */
+            position: relative;
+        }
+        /*Crear los equipos*/
+        .container {
+            margin-bottom: 30px;
+            text-align: center;
         }
 
-        .modal-close {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        .search-box {
-            margin: 20px auto;
-            max-width: 400px;
-        }
-        .search-box input {
-            width: 100%;
+        select {
             padding: 10px;
-            font-size: 1em;
-            border-radius: 8px;
-            border: 1px solid #ccc;
+            font-size: 16px;
+            width: 200px;
         }
+
+        .team-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        .brawler-card {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 10px;
+            text-align: center;
+            width: 150px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .brawler-card img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+        }
+
+        .brawler-card h3 {
+            margin: 10px 0;
+            font-size: 18px;
+        }
+
+        .brawler-stats p {
+            font-size: 14px;
+            margin: 5px 0;
+        }
+
+        .team-stats {
+            margin-top: 20px;
+            font-size: 18px;
+            background-color: #e9ecef;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .reset-btn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #f03e3e;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-align: center;
+        }
+
+        .reset-btn:hover {
+            background-color: #d93030;
+        }
+
+        /*Modo de juego*/
         #modos {
         background-color: #2c2f33;
         width: 90%;
@@ -176,6 +225,7 @@
             display: block;
             margin-top: 10px;
         }
+        /*Rareza*/
         .legendario {
         background-color: #f2b500;
         color: #fff;
@@ -463,7 +513,6 @@
 
 <section id="modos">
     <h2>Modos de Juego</h2>
-
     <!-- Modo Brawl Ball -->
     <button class="accordion">Brawl Ball</button>
     <div class="panel">
