--- a/Noveno dia/brawls.html
+++ b/Noveno dia/brawls.html
@@ -510,7 +510,9 @@
       }
     }
   </script>
+    <!-- Formar equipos y estadisticas-->
 
+    
 <section id="modos">
     <h2>Modos de Juego</h2>
     <!-- Modo Brawl Ball -->
