nombre de los personajes

--- a/Noveno y Decimo dia/brawls.html
+++ b/Noveno y Decimo dia/brawls.html
@@ -511,7 +511,48 @@
     }
   </script>
     <!-- Formar equipos y estadisticas-->
-
+    <div class="container">
+        <h2>Selecciona brawlers para tu equipo de 3:</h2>
+        <select id="brawler-select" onchange="addBrawlerToTeam()">
+            <option value="">Seleccionar Brawler...</option>
+            <option value="Kenji">Kenji</option>
+            <option value="Shelly">Shelly</option>
+            <option value="Ollie">Ollie</option>
+            <option value="Gromp">Gromp</option>
+            <option value="Frank">Frank</option>
+            <option value="Bull">Bull</option>
+            <option value="Bibi">Bibi</option>
+            <option value="Crow">Crow</option>
+            <option value="Ash">Ash</option>
+            <option value="Melodie">Melodie</option>
+            <option value="Colt">Colt</option>
+            <option value="El Primo">El Primo</option>
+            <option value="Poco">Poco</option>
+            <option value="Edgar">Edgar</option>
+            <option value="Spike">Spike</option>
+            <option value="Mr.P">Mr.P</option>
+            <option value="Rico">Rico</option>
+            <option value="Mortis">Mortis</option>
+            <option value="Eve">Eve</option>
+            <option value="Nita">Nita</option>
+            <option value="Mico">Mico</option>
+            <option value="Squeak">Squeak</option>
+            <option value="Shade">Shade</option>
+            <option value="Willow">Willow</option>
+            <option value="Juju">Juju</option>
+            <option value="Kit">Kit</option>
+            <option value="Chester">Chester</option>
+            <option value="Jacky">Jacky</option>
+            <option value="Buzz">Buzz</option>
+            <option value="Leon">Leon</option>
+            <option value="Doug">Doug</option>
+            <option value="Buster">Buster</option>
+            <option value="Fang">Fang</option>
+            <option value="Larry & Lawrie">Larry & Lawrie</option>
+            <option value="Dynamike">Dynamike</option>
+            <option value="Gray">Gray</option>
+        </select>
+    </div>
     
 <section id="modos">
     <h2>Modos de Juego</h2>
