--- a/Noveno y Decimo dia/brawls.html
+++ b/Noveno y Decimo dia/brawls.html
@@ -553,7 +553,173 @@
             <option value="Gray">Gray</option>
         </select>
     </div>
-    
+    <div class="team-container" id="team-container"></div>
+
+    <div id="team-stats" class="team-stats"></div>
+
+    <button class="reset-btn" onclick="resetTeam()">Reiniciar Equipo</button>
+
+    <script>
+        // Definir las estadísticas y las imágenes de los brawlers
+        const brawlersStats = {
+        "Kenji": {
+            salud: 4200, daño: 1120, velocidad: 2.8, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/8/87/Kenji-pfp.png/revision/latest?cb=20240830194802&path-prefix=es"
+        },
+        "Shelly": {
+            salud: 3000, daño: 560, velocidad: 2.9, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/c/c9/Shelly1-pfp.webp/revision/latest?cb=20231214173051&path-prefix=es"
+        },
+        "Ollie": {
+            salud: 3200, daño: 480, velocidad: 3.1, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/5/57/Ollie-pfp.png/revision/latest?cb=20241212135727&path-prefix=es"
+        },
+        "Gromp": {
+            salud: 3600, daño: 720, velocidad: 2.5, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/9/99/Grom1pfp.png/revision/latest?cb=20231123005314&path-prefix=es"
+        },
+        "Ash": {
+            salud: 4000, daño: 700, velocidad: 2.7, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/3/36/Ash1-pfp.webp/revision/latest?cb=20231215154300&path-prefix=es"
+        },
+        "Melodie": {
+            salud: 3800, daño: 600, velocidad: 2.9, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/f/ff/Melodie1-pfp.png/revision/latest?cb=20240229104516"
+        },
+        "Colt": {
+            salud: 2800, daño: 560, velocidad: 3.2, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/a/a2/Colt1-pfp.webp/revision/latest?cb=20231215182343&path-prefix=es"
+        },
+        "El Primo": {
+            salud: 6000, daño: 800, velocidad: 2.4, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/2/23/El_Primo1-pfp.png/revision/latest?cb=20220429011308"
+        },
+        "Poco": {
+            salud: 4000, daño: 480, velocidad: 2.8, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/5/5a/Poco1-pfp.png/revision/latest?cb=20240507111121"
+        },
+        "Edgar": {
+            salud: 3400, daño: 450, velocidad: 3.5, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/8/8d/Edgar.png/revision/latest?cb=20201220011122&path-prefix=es"
+        },
+        "Spike": {
+            salud: 2400, daño: 460, velocidad: 2.7, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/9/97/Spike1-pfp.png/revision/latest?cb=20250301030317"
+        },
+        "Bibi": {
+            salud: 5200, daño: 130, velocidad: 2.7, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/a/a1/Bibi1-pfp.png/revision/latest?cb=20220429013921"
+        },
+        "Mr.p": {
+            salud: 4000, daño: 640, velocidad: 2.7, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/1/19/Mr._P1-pfp.png/revision/latest?cb=20220429014441"
+        },
+        "Rico": {
+            salud: 2800, daño: 640, velocidad: 2.8, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/7/7e/Rico1-pfp.png/revision/latest?cb=20220429011633"
+        },
+        "Mortis": {
+            salud: 2400, daño: 560, velocidad: 3.4, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/1/14/Mortis1-pfp.png/revision/latest?cb=20250301030807"
+        },
+        "Eve": {
+            salud: 4200, daño: 560, velocidad: 2.6, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/0/02/Eve1-pfp.png/revision/latest?cb=20231002062109"
+        },
+        "Nita": {
+            salud: 4000, daño: 400, velocidad: 2.6, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/0/01/Nita1-pfp.webp/revision/latest?cb=20231215160623&path-prefix=es"
+        },
+        "Mico": {
+            salud: 3800, daño: 520, velocidad: 2.9, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/f/f4/Mico1-pfp.png/revision/latest?cb=20231224210800"
+        },
+        "Squeak": {
+            salud: 3200, daño: 800, velocidad: 2.5, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/b/bb/Squeak1-pfp.png/revision/latest?cb=20220429014621"
+        },
+        "Shade": {
+            salud: 3400, daño: 560, velocidad: 2.8, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/9/95/Shade-pfp.png/revision/latest?cb=20241030195220&path-prefix=es"
+        },
+        "Willow": {
+            salud: 4000, daño: 480, velocidad: 2.6, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/b/b7/Willow1-pfp.webp/revision/latest?cb=20231217164656&path-prefix=es"
+        },
+        "Juju": {
+            salud: 3800, daño: 680, velocidad: 2.7, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/9/9e/Juju-pfp.png/revision/latest?cb=20241030194758&path-prefix=es"
+        },
+        "Kit": {
+            salud: 3000, daño: 500, velocidad: 3.3, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/2/23/Kit1-pfp.png/revision/latest?cb=20231224210915"
+        },
+        "Chester": {
+            salud: 3400, daño: 560, velocidad: 2.9, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/d/db/Chester1-pfp.png/revision/latest?cb=20221216064656"
+        },
+        "Jacky": {
+            salud: 5600, daño: 480, velocidad: 2.4, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/f/fc/Jacky1-pfp.png/revision/latest?cb=20220429011814"
+        },
+        "Buzz": {
+            salud: 4000, daño: 640, velocidad: 2.9, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/b/be/Buzz1-pfp.png/revision/latest?cb=20220429015140"
+        },
+        "Leon": {
+            salud: 2800, daño: 520, velocidad: 3.0, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/8/8b/Leon1-pfp.png/revision/latest?cb=20250301030238"
+        },
+        "Doug": {
+            salud: 3800, daño: 560, velocidad: 2.7, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/0/0b/Loading_screen_-_Temporada_37.png/revision/latest/scale-to-width-down/1450?cb=20250223161302&path-prefix=es"
+        },
+        "Buster": {
+            salud: 4800, daño: 600, velocidad: 2.6, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/4/4c/Buster1-pfp.png/revision/latest?cb=20221105091624"
+        },
+        "Crow": {
+            salud: 2400, daño: 360, velocidad: 3.1, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/4/48/Crow1-pfp.png/revision/latest?cb=20250301030300"
+        },
+        "Bull": {
+            salud: 6000, daño: 780, velocidad: 2.6, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/e/e8/Bull1-pfp.jpg/revision/latest?cb=20240303215404&path-prefix=es"
+        },
+        "Larry&Lawrie": {
+            salud: 3800, daño: 720, velocidad: 2.8, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/7/71/Larry_%26_Lawrie_Icono.webp/revision/latest?cb=20240203172244&path-prefix=es"
+        },
+        "Fang": {
+            salud: 3800, daño: 540, velocidad: 3.0, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/f/fb/Fang1-pfp.png/revision/latest?cb=20220429015244"
+        },
+        "Dynamike": {
+            salud: 2800, daño: 640, velocidad: 2.5, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/d/d9/Dynamike1-pfp.png/revision/latest?cb=20220428153421"
+        },
+        "Gray": {
+            salud: 3600, daño: 560, velocidad: 2.9, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/4/49/Gray1-pfp.png/revision/latest?cb=20221216064637"
+        },
+        "Frank": {
+            salud: 8000, daño: 560, velocidad: 2.4, 
+            imagen: "https://static.wikia.nocookie.net/brawlstars/images/8/86/Frank1-pfp.png/revision/latest?cb=20220429013846"
+        }
+    };
+        let team = [];  
+
+        // Función para agregar brawler al equipo
+        function addBrawlerToTeam() {
+            const brawlerName = document.getElementById('brawler-select').value;
+            
+            if (brawlerName && team.length < 5 && !team.includes(brawlerName)) {
+                team.push(brawlerName);
+                displayTeam();
+                updateTeamStats();
+            }
+        }
+    </script>
 <section id="modos">
     <h2>Modos de Juego</h2>
     <!-- Modo Brawl Ball -->
@@ -650,6 +816,6 @@
             }
         });
     }
-</script>
+</>
 </body>
 </html>
