--- a/Noveno y Decimo dia/brawls.html
+++ b/Noveno y Decimo dia/brawls.html
@@ -107,6 +107,7 @@
             position: relative;
         }
         /*Crear los equipos*/
+        
         .container {
             margin-bottom: 30px;
             text-align: center;
@@ -161,38 +162,102 @@
             text-align: center;
         }
 
-        .reset-btn {
-            margin-top: 20px;
-            padding: 10px 20px;
+        /* Asegúrate de que el botón esté debajo del equipo */
+        .container {
+            display: flex;
+            flex-direction: column; 
+            justify-content: center; 
+            align-items: center; 
+            height: 20vh;
+            text-align: center; 
+        }
+
+        /* Estilos para el selector */
+        select {
+            padding: 10px;
             font-size: 16px;
-            background-color: #f03e3e;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
+            width: 250px;
+            margin-bottom: 20px; 
+        }
+
+        /* Contenedor del equipo */
+        .team-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        /* Tarjetas de los brawlers */
+        .brawler-card {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 10px;
+            text-align: center;
+            width: 150px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .brawler-card img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+        }
+
+        .brawler-card h3 {
+            margin: 10px 0;
+            font-size: 18px;
+        }
+
+        .brawler-stats p {
+            font-size: 14px;
+            margin: 5px 0;
+        }
+
+        /* Estilos para las estadísticas del equipo */
+        .team-stats {
+            margin-top: 20px;
+            font-size: 18px;
+            background-color: #e9ecef;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
 
+        /* Estilo del botón reset */
+        .reset-btn {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #f03e3e;
+            color: #fff; 
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 30px; 
+            width: 200px;
+        }
         .reset-btn:hover {
             background-color: #d93030;
         }
 
         /*Modo de juego*/
         #modos {
-        background-color: #2c2f33;
-        width: 90%;
-        color: #ffffff;
-        padding: 30px;
-        border-radius: 15px;
-        margin: 40px auto;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+            background-color: #2c2f33;
+            width: 90%;
+            color: #ffffff;
+            padding: 30px;
+            border-radius: 15px;
+            margin: 40px auto;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
         }
 
         #modos h2 {
-        text-align: center;
-        margin-bottom: 20px;
-        color: #ffcc00;
+            text-align: center;
+            margin-bottom: 20px;
+            color: #ffcc00;
         }
 
         .accordion {
@@ -227,28 +292,28 @@
         }
         /*Rareza*/
         .legendario {
-        background-color: #f2b500;
-        color: #fff;
+            background-color: #f2b500;
+            color: #fff;
         }
 
         .mitico {
-        background-color: #fc5050;
-        color: #fff;
+            background-color: #fc5050;
+            color: #fff;
         }
 
         .epico {
-        background-color:  #8e44ad;
-        color: #fff;
+            background-color:  #8e44ad;
+            color: #fff;
         }
 
         .especial {
-        background-color:blue;
-        color: #fff;
+            background-color:blue;
+            color: #fff;
         }
 
         .inicial {
-        background-color: #00f64a; 
-        color: #333;
+            background-color: #00f64a; 
+            color: #333;
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -261,6 +326,7 @@
     </header><nav>
     <a href="#general">¿Qué es Brawl Stars?</a>
     <a href="#galeria">Galería de Brawlers</a>
+    <a href="#container">Formar Equipos</a>
     <a href="#modos">Modos de Juego</a>
 </nav>
 
@@ -719,7 +785,73 @@
                 updateTeamStats();
             }
         }
+          // Función para mostrar el equipo seleccionado
+          function displayTeam() {
+            const teamContainer = document.getElementById('team-container');
+            teamContainer.innerHTML = '';
+
+            team.forEach(brawler => {
+                const stats = brawlersStats[brawler];
+                const brawlerCard = document.createElement('div');
+                brawlerCard.className = 'brawler-card';
+                brawlerCard.innerHTML = `
+                    <img src="${stats.imagen}" alt="${brawler}">
+                    <h3>${brawler}</h3>
+                    <div class="brawler-stats">
+                        <p>Salud: ${stats.salud}</p>
+                        <p>Daño: ${stats.daño}</p>
+                        <p>Velocidad: ${stats.velocidad}</p>
+                    </div>
+                `;
+                teamContainer.appendChild(brawlerCard);
+            });
+        }
+
+        // Función para actualizar las estadísticas del equipo
+        function updateTeamStats() {
+            let totalSalud = 0;
+            let totalDaño = 0;
+            let totalVelocidad = 0;
+
+            team.forEach(brawler => {
+                const stats = brawlersStats[brawler];
+                totalSalud += stats.salud;
+                totalDaño += stats.daño;
+                totalVelocidad += stats.velocidad;
+            });
+
+            const teamStats = `
+                <p><strong>Estadísticas del Equipo:</strong></p>
+                <p>Salud Total: ${totalSalud}</p>
+                <p>Daño Total: ${totalDaño}</p>
+                <p>Velocidad Promedio: ${(totalVelocidad / team.length).toFixed(2)}</p>
+            `;
+
+            document.getElementById('team-stats').innerHTML = teamStats;
+        }
+
+        function resetTeam() {
+                team = [];
+                // Reiniciar el valor del selector
+                const brawlerSelect = document.getElementById('brawler-select');
+                if (brawlerSelect) {
+                    brawlerSelect.value = ""; 
+                }
+
+                // Limpiar el contenedor de los brawlers seleccionados
+                const teamContainer = document.getElementById('team-container');
+                if (teamContainer) {
+                    teamContainer.innerHTML = "";
+                }
+
+                // Limpiar los stats del equipo
+                const teamStats = document.getElementById('team-stats');
+                if (teamStats) {
+                    teamStats.innerHTML = "";
+                }
+            }
     </script>
+
 <section id="modos">
     <h2>Modos de Juego</h2>
     <!-- Modo Brawl Ball -->
@@ -795,27 +927,27 @@
     </div>
 </section>
 
-<script>
-    // Obtén todos los botones de acordeón
-    var accordions = document.getElementsByClassName("accordion");
+    <script>
+        // Obtén todos los botones de acordeón
+        var accordions = document.getElementsByClassName("accordion");
 
-    // Añade un evento de clic a cada uno
-    for (var i = 0; i < accordions.length; i++) {
-        accordions[i].addEventListener("click", function() {
-            // Alterna la clase "active" para cambiar el estilo
-            this.classList.toggle("active");
+        // Añade un evento de clic a cada uno
+        for (var i = 0; i < accordions.length; i++) {
+            accordions[i].addEventListener("click", function() {
+                
+                this.classList.toggle("active");
 
-            // Obtén el panel correspondiente
-            var panel = this.nextElementSibling;
+                // Obtén el panel correspondiente
+                var panel = this.nextElementSibling;
 
-            // Si el panel está visible, ocúltalo; si no, muéstralo
-            if (panel.style.display === "block") {
-                panel.style.display = "none";
-            } else {
-                panel.style.display = "block";
-            }
-        });
-    }
-</>
+                // Si el panel está visible, ocúltalo;
+                if (panel.style.display === "block") {
+                    panel.style.display = "none";
+                } else {
+                    panel.style.display = "block";
+                }
+            });
+        }
+    </script>
 </body>
 </html>
