--- a/Decimo dia/calculadora.html
+++ b/Decimo dia/calculadora.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora Avanzada</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculadora Avanzada</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="calculator">
-    <div class="history">
-      <ul id="historyList"></ul>
+    <div class="calculator">
+        <div class="history" id="history"></div>
+        <input type="text" id="display" disabled>
+        <div class="buttons">
+            <button class="btn" onclick="appendToDisplay('7')">7</button>
+            <button class="btn" onclick="appendToDisplay('8')">8</button>
+            <button class="btn" onclick="appendToDisplay('9')">9</button>
+            <button class="btn operator" onclick="appendToDisplay('+')">+</button>
+
+            <button class="btn" onclick="appendToDisplay('4')">4</button>
+            <button class="btn" onclick="appendToDisplay('5')">5</button>
+            <button class="btn" onclick="appendToDisplay('6')">6</button>
+            <button class="btn operator" onclick="appendToDisplay('-')">-</button>
+
+            <button class="btn" onclick="appendToDisplay('1')">1</button>
+            <button class="btn" onclick="appendToDisplay('2')">2</button>
+            <button class="btn" onclick="appendToDisplay('3')">3</button>
+            <button class="btn operator" onclick="appendToDisplay('*')">*</button>
+
+            <button class="btn" onclick="appendToDisplay('0')">0</button>
+            <button class="btn" onclick="clearDisplay()">C</button>
+            <button class="btn" onclick="deleteLast()">←</button>
+            <button class="btn operator" onclick="appendToDisplay('/')">/</button>
+
+            <button class="btn advanced" onclick="appendToDisplay('Math.sin(')">sin</button>
+            <button class="btn advanced" onclick="appendToDisplay('Math.cos(')">cos</button>
+            <button class="btn advanced" onclick="appendToDisplay('Math.tan(')">tan</button>
+            <button class="btn advanced" onclick="appendToDisplay('Math.sqrt(')">√</button>
+
+            <button class="btn" onclick="calculatePercentage()">%</button>
+            <button class="btn" onclick="appendToDisplay('(')">(</button>
+            <button class="btn" onclick="appendToDisplay(')')">)</button>
+
+            <button class="btn operator" onclick="calculateResult()">=</button>
+        </div>
     </div>
-    <input type="text" id="display" class="display" disabled>
-    <div class="buttons">
-      <button class="button" onclick="clearDisplay()">C</button>
-      <button class="button" onclick="deleteLast()">←</button>
-      <button class="button" onclick="appendOperator('%')">%</button>
-      <button class="button" onclick="appendOperator('/')">/</button>
 
-      <button class="button" onclick="appendNumber('7')">7</button>
-      <button class="button" onclick="appendNumber('8')">8</button>
-      <button class="button" onclick="appendNumber('9')">9</button>
-      <button class="button" onclick="appendOperator('*')">*</button>
-
-      <button class="button" onclick="appendNumber('4')">4</button>
-      <button class="button" onclick="appendNumber('5')">5</button>
-      <button class="button" onclick="appendNumber('6')">6</button>
-      <button class="button" onclick="appendOperator('-')">-</button>
-
-      <button class="button" onclick="appendNumber('1')">1</button>
-      <button class="button" onclick="appendNumber('2')">2</button>
-      <button class="button" onclick="appendNumber('3')">3</button>
-      <button class="button" onclick="appendOperator('+')">+</button>
-
-      <button class="button" onclick="appendNumber('0')">0</button>
-      <button class="button" onclick="appendDecimal()">.</button>
-      <button class="button" onclick="calculateResult()">=</button>
-      <button class="button" onclick="sqrt()">√</button>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
