--- a/Decimo dia/calculadora.html
+++ b/Decimo dia/calculadora.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Avanzada</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./calculate_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.png">
 </head>
 <body>
     <div class="calculator">
