--- a/undecimo/Marvel.html
+++ b/undecimo/Marvel.html
@@ -28,7 +28,64 @@
         <h2>Bienvenido al Universo Marvel</h2>
         <p>Explora a tus héroes y villanos favoritos.</p>
       </div>
-    </section>    
+    </section>   
+
+      <!-- Personajes famosos -->
+
+    <section class="personajes-destacados">
+      <h3>Personajes Destacados</h3>
+      <div class="card-container">
+        <div class="card">
+          <img src="https://oyster.ignimgs.com/wordpress/stg.ign.com/2020/12/the-evolution-of-iron-man-in-the-mcu.jpg" alt="">
+          <h4>Iron Man</h4>
+        </div>
+        <div class="card">
+          <img src="https://oyster.ignimgs.com/wordpress/stg.ign.com/2020/12/chris-evans-expects-avengers-4-to-be-his-last-mcu-movie_ksk9.jpg" alt="">
+          <h4>Capitán América</h4>
+        </div>
+        <div class="card">
+          <img src="https://oyster.ignimgs.com/wordpress/stg.ign.com/2020/12/173-1730826_thor-ragnarok-wallpaper-marvel-cinematic-universe-thor-ragnarok.jpg" alt="">
+          <h4>Thor</h4>
+        </div>
+        <div class="card">
+          <img src="https://oyster.ignimgs.com/wordpress/stg.ign.com/2020/12/antman-falcon.jpg" alt="">
+          <h4>Scott Lang (Ant-Man)</h4>
+        </div>
+        <div class="card">
+          <img src="https://oyster.ignimgs.com/wordpress/stg.ign.com/2020/12/spider-man_main-1280x720.jpg" alt="">
+          <h4>Spider-Man</h4>
+        </div>
+        <div class="card">
+          <img src="https://oyster.ignimgs.com/wordpress/stg.ign.com/2020/12/ocA7mZJmT97HzvesMjkXKA.jpg" alt="">
+          <h4>Viuda Negra</h4>
+        </div>
+        <div class="card">
+          <img src="https://oyster.ignimgs.com/wordpress/stg.ign.com/2021/02/hulk.jpg" alt="">
+          <h4>Hulk</h4>
+        </div>
+        <div class="card">
+          <img src="https://oyster.ignimgs.com/wordpress/stg.ign.com/2020/12/Chadwick-Boseman-as-Black-Panther-Featured-Image.jpg" alt="">
+          <h4>Black Panther</h4>
+        </div>
+        <div class="card">
+          <img src="https://assets-prd.ignimgs.com/2022/05/12/doctorstrange-1652395049703.jpg" alt="">
+          <h4>Doctor Strange</h4>
+        </div>
+        <div class="card">
+          <img src="https://oyster.ignimgs.com/wordpress/stg.ign.com/2020/12/avengers-4-what-hawkeyes-ronin-costume-reveals-about-the-sta_qn9z.jpg" alt="">
+          <h4>Ojo de Halcón</h4>
+        </div>
+        <div class="card">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFvNdD0gQ7rHd9_0tlTpOyfg0hSdNzvrbzrQ&s" alt="">
+          <h4>Loki</h4>
+        </div>
+        <div class="card">
+          <img src="https://oyster.ignimgs.com/wordpress/stg.ign.com/2020/12/614a86c8-405f-4fd8-b60d-93998c769661.sized-1000x1000.jpg" alt="">
+          <h4>Rocket</h4>
+        </div>
+      </div>
+    </section>
+    
   </main>
 
   <footer>
