ropa marvel undecimo dia de practicas

--- a/undecimo/Marvel.html
+++ b/undecimo/Marvel.html
@@ -14,8 +14,8 @@
       <ul>
         <li><a href="Marvel.html">Inicio</a></li>
         <li><a href="Personajes.html">Personajes</a></li>
-        <li><a href="#">Ropa</a></li>
-        <li><a href="#">Películas</a></li>
+        <li><a href="Ropa.html">Ropa</a></li>
+        <li><a href="Peliculas.html">Películas</a></li>
       </ul>
     </nav>
   </header>
@@ -181,18 +181,19 @@
     <div class="footer-container">
       <p>© 2025 Fan Page Marvel. No oficial.</p>
       <div class="social-links">
-        <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
-          <img src="https://img.icons8.com/?size=100&id=118468&format=png&color=000000" alt="Facebook" />
+        <a href="https://www.facebook.com" target="_blank" aria-label="">
+          <img src="https://img.icons8.com/?size=100&id=118468&format=png&color=000000" alt="" />
         </a>
-        <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-          <img src="https://img.icons8.com/?size=50&id=32292&format=png" alt="Instagram" />
+        <a href="https://www.instagram.com" target="_blank" aria-label="">
+          <img src="https://img.icons8.com/?size=50&id=32292&format=png" alt=""/>
         </a>
-        <a href="https://www.twitter.com" target="_blank" aria-label="Twitter">
-          <img src="https://img.icons8.com/?size=100&id=6Fsj3rv2DCmG&format=png&color=000000" alt="Twitter" />
+        <a href="https://www.twitter.com" target="_blank" aria-label="">
+          <img src="https://img.icons8.com/?size=100&id=6Fsj3rv2DCmG&format=png&color=000000" alt="" />
         </a>
       </div>
     </div>
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
